--- a/html-css-popup/styles.css
+++ b/html-css-popup/styles.css
@@ -14,6 +14,10 @@
   /* bg colors */
   --main-bg: #fafafc;
   --title-bg: #eff3f6;
+
+  /* scrollbar */
+  --scrollbar: rgba(92, 98, 246, 0.3);
+  --scrollbar-active: rgba(92, 98, 246, 0.5);
 }
 
 .wrapper {
@@ -159,11 +163,39 @@
   position: absolute;
   top: 312px;
 
-  display: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  max-height: 440px;
+
+  background: var(--main-bg);
+  border: 2px solid var(--secondary-title);
+  border-radius: 8px;
+
+  visibility: hidden;
+  opacity: 0;
+  transition: all 0.15s linear 0s;
+
+  overflow-y: auto;
 }
 
 .visually-hidden:checked~.popup {
-  display: block;
+  opacity: 1;
+  visibility: visible;
+}
+
+.popup::-webkit-scrollbar {
+  width: 4px;
+}
+
+.popup::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar);
+  border-radius: 2px;
+}
+
+.popup::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scrollbar-active);
 }
 
 .popup__items {
@@ -173,12 +205,6 @@
   grid-template: repeat(3, 1fr) / repeat(3, 1fr);
 
   width: 340px;
-
-  background: var(--main-bg);
-  border: 2px solid var(--secondary-title);
-  border-radius: 8px;
-
-  box-shadow: 2px 2px 4px var(--title);
 }
 
 .popup__item {
@@ -287,6 +313,46 @@
 .bg-instagram:focus,
 .bg-instagram:hover {
   background: var(--secondary-title) url(./images/instagram-h.svg) 14px 6px/52px no-repeat;
+}
+
+/* more styles */
+
+.popup__more {
+  display: flex;
+  justify-content: center;
+
+  width: 100%;
+}
+
+.btn-more {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  width: 50%;
+  height: 24px;
+
+  font-weight: 600;
+  text-transform: uppercase;
+  background-color: var(--title-bg);
+  border-radius: 8px;
+
+  cursor: pointer;
+
+  visibility: visible;
+  opacity: 1;
+  transition: all 0.15s linear 0s;
+}
+
+.visually-hidden:hover~.btn-more,
+.visually-hidden:focus~.btn-more {
+  background-color: var(--secondary-title);
+  color: var(--btn);
+}
+
+.visually-hidden:checked~.btn-more {
+  opacity: 0;
+  visibility: hidden;
 }
 
 /* ---------------------------------------------- */
