--- a/html-css-popup/styles.css
+++ b/html-css-popup/styles.css
@@ -5,7 +5,7 @@
   --font-family: 'Poppins', sans-serif;
 
   /* font colors */
-  --title: #0b2239;
+  --footer: #0b2239;
   --primary-title: #5c62f6;
   --secondary-title: #2c8cf4;
   --text: #374957;
@@ -14,10 +14,16 @@
   /* bg colors */
   --main-bg: #fafafc;
   --title-bg: #eff3f6;
+  --btn-bg: #eff3f6;
+  --header-btn-bg: #5c62f6;
+  --popup-btn-bg: #2c8cf4;
 
   /* scrollbar */
   --scrollbar: rgba(92, 98, 246, 0.3);
   --scrollbar-active: rgba(92, 98, 246, 0.5);
+
+  /* shadow */
+  --shadow: #0b2239;
 }
 
 .wrapper {
@@ -47,6 +53,12 @@
   flex-direction: column;
 }
 
+@media (max-width: 1400px) {
+  .header {
+    margin: 60px 10% 0;
+  }
+}
+
 /* header title */
 .header__conteiner {
   margin-bottom: 40px;
@@ -62,6 +74,12 @@
 
   background-color: var(--title-bg);
   border-radius: 20px;
+}
+
+@media (max-width: 1400px) {
+  .header__conteiner {
+    margin-bottom: 28px;
+  }
 }
 
 .header__conteiner-title {
@@ -85,7 +103,13 @@
   flex-direction: row;
   justify-content: space-around;
 
-  width: 100%;
+  width: 60%;
+}
+
+@media (max-width: 1400px) {
+  .header__nav-items {
+    width: 80%;
+  }
 }
 
 .header__nav-item {
@@ -94,20 +118,21 @@
   align-items: center;
   justify-content: center;
 
-  width: 100%;
-
   font-size: 16px;
 }
 
 .visually-hidden {
   position: absolute;
-  width: 1px;
-  height: 1px;
+
   margin: -1px;
   padding: 0;
+
+  width: 1px;
+  height: 1px;
+
   border: 0;
-  overflow: hidden;
   clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .btn,
@@ -120,14 +145,14 @@
   justify-content: center;
   align-items: center;
 
-  width: 200px;
+  width: 220px;
   height: 40px;
 
   text-transform: uppercase;
   font-size: 18px;
   font-weight: 600;
 
-  background: var(--title-bg) url(./images/menu-burger.svg) 12px 8px/24px no-repeat;
+  background: var(--btn-bg) url(./images/menu-burger.svg) 12px 8px/24px no-repeat;
   border-radius: 8px;
 
   text-decoration: none;
@@ -143,19 +168,19 @@
 .visually-hidden:focus~.btn,
 .other:hover,
 .other:focus {
-  background: var(--primary-title) url(./images/menu-burger-active.svg) 12px 8px/24px no-repeat;
+  background: var(--header-btn-bg) url(./images/menu-burger-active.svg) 12px 8px/24px no-repeat;
   color: var(--btn);
 }
 
 .btn:active,
 .other:active {
-  box-shadow: 2px 2px 4px var(--title);
+  box-shadow: 2px 2px 4px var(--shadow);
 }
 
 .visually-hidden:checked~.btn {
-  background: var(--primary-title) url(./images/cross.svg) 14px 10px/20px no-repeat;
+  background: var(--header-btn-bg) url(./images/cross.svg) 14px 10px/20px no-repeat;
   color: var(--btn);
-  box-shadow: 2px 2px 4px var(--title);
+  box-shadow: 2px 2px 4px var(--shadow);
 }
 
 /* popup styles */
@@ -167,10 +192,10 @@
   flex-direction: column;
   align-items: center;
 
-  max-height: 440px;
+  max-height: 424px;
 
   background: var(--main-bg);
-  border: 2px solid var(--secondary-title);
+  border: 2px solid var(--popup-btn-bg);
   border-radius: 8px;
 
   visibility: hidden;
@@ -180,29 +205,29 @@
   overflow-y: auto;
 }
 
+@media (max-width: 1400px) {
+  .popup {
+    top: 240px;
+  }
+}
+
+@media (max-width: 1300px) {
+  .popup {
+    max-height: 380px;
+  }
+}
+
 .visually-hidden:checked~.popup {
   opacity: 1;
   visibility: visible;
 }
 
-.popup::-webkit-scrollbar {
-  width: 4px;
-}
-
-.popup::-webkit-scrollbar-thumb {
-  background-color: var(--scrollbar);
-  border-radius: 2px;
-}
-
-.popup::-webkit-scrollbar-thumb:hover {
-  background-color: var(--scrollbar-active);
-}
-
 .popup__items {
-  padding: 20px;
+  padding: 20px 20px 0;
 
   display: grid;
-  grid-template: repeat(3, 1fr) / repeat(3, 1fr);
+  grid-template: 1fr / repeat(3, 1fr);
+  grid-auto-rows: 100px;
 
   width: 340px;
 }
@@ -234,13 +259,14 @@
   border-radius: 4px;
 }
 
+/* media links */
 .bg-facebook {
   background: url(./images/facebook.svg) 14px 6px/52px no-repeat;
 }
 
 .bg-facebook:focus,
 .bg-facebook:hover {
-  background: var(--secondary-title) url(./images/facebook-h.svg) 14px 6px/52px no-repeat;
+  background: var(--popup-btn-bg) url(./images/facebook-h.svg) 14px 6px/52px no-repeat;
 }
 
 .bg-whatsapp {
@@ -249,7 +275,7 @@
 
 .bg-whatsapp:focus,
 .bg-whatsapp:hover {
-  background: var(--secondary-title) url(./images/whatsapp-h.svg) 14px 6px/52px no-repeat;
+  background: var(--popup-btn-bg) url(./images/whatsapp-h.svg) 14px 6px/52px no-repeat;
 }
 
 .bg-twitter {
@@ -258,7 +284,7 @@
 
 .bg-twitter:focus,
 .bg-twitter:hover {
-  background: var(--secondary-title) url(./images/twitter-h.svg) 14px 6px/52px no-repeat;
+  background: var(--popup-btn-bg) url(./images/twitter-h.svg) 14px 6px/52px no-repeat;
 }
 
 .bg-linkedin {
@@ -267,7 +293,7 @@
 
 .bg-linkedin:focus,
 .bg-linkedin:hover {
-  background: var(--secondary-title) url(./images/linkedin-h.svg) 14px 6px/52px no-repeat;
+  background: var(--popup-btn-bg) url(./images/linkedin-h.svg) 14px 6px/52px no-repeat;
 }
 
 .bg-tik-tok {
@@ -276,7 +302,7 @@
 
 .bg-tik-tok:focus,
 .bg-tik-tok:hover {
-  background: var(--secondary-title) url(./images/tik-tok-h.svg) 14px 6px/52px no-repeat;
+  background: var(--popup-btn-bg) url(./images/tik-tok-h.svg) 14px 6px/52px no-repeat;
 }
 
 .bg-telegram {
@@ -285,7 +311,7 @@
 
 .bg-telegram:focus,
 .bg-telegram:hover {
-  background: var(--secondary-title) url(./images/telegram-h.svg) 14px 6px/52px no-repeat;
+  background: var(--popup-btn-bg) url(./images/telegram-h.svg) 14px 6px/52px no-repeat;
 }
 
 .bg-vk {
@@ -294,7 +320,7 @@
 
 .bg-vk:focus,
 .bg-vk:hover {
-  background: var(--secondary-title) url(./images/vk-h.svg) 14px 6px/52px no-repeat;
+  background: var(--popup-btn-bg) url(./images/vk-h.svg) 14px 6px/52px no-repeat;
 }
 
 .bg-goodreads {
@@ -303,7 +329,7 @@
 
 .bg-goodreads:focus,
 .bg-goodreads:hover {
-  background: var(--secondary-title) url(./images/goodreads-h.svg) 14px 6px/52px no-repeat;
+  background: var(--popup-btn-bg) url(./images/goodreads-h.svg) 14px 6px/52px no-repeat;
 }
 
 .bg-instagram {
@@ -312,47 +338,114 @@
 
 .bg-instagram:focus,
 .bg-instagram:hover {
-  background: var(--secondary-title) url(./images/instagram-h.svg) 14px 6px/52px no-repeat;
+  background: var(--popup-btn-bg) url(./images/instagram-h.svg) 14px 6px/52px no-repeat;
+}
+
+/* scrollbar styles */
+.popup::-webkit-scrollbar {
+  width: 4px;
+}
+
+.popup::-webkit-scrollbar-thumb {
+  background-color: var(--scrollbar);
+  border-radius: 2px;
+}
+
+.popup::-webkit-scrollbar-thumb:hover {
+  background-color: var(--scrollbar-active);
 }
 
 /* more styles */
-
-.popup__more {
-  display: flex;
-  justify-content: center;
-
-  width: 100%;
+.popup__items.more {
+  padding: 0 20px 20px;
+  display: none;
 }
 
 .btn-more {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: 12px auto 20px;
+  padding-top: 3px;
 
   width: 50%;
   height: 24px;
 
   font-weight: 600;
   text-transform: uppercase;
-  background-color: var(--title-bg);
+  text-align: center;
+
+  background-color: var(--btn-bg);
   border-radius: 8px;
 
   cursor: pointer;
-
-  visibility: visible;
-  opacity: 1;
   transition: all 0.15s linear 0s;
 }
 
 .visually-hidden:hover~.btn-more,
 .visually-hidden:focus~.btn-more {
-  background-color: var(--secondary-title);
+  background-color: var(--popup-btn-bg);
   color: var(--btn);
 }
 
 .visually-hidden:checked~.btn-more {
-  opacity: 0;
-  visibility: hidden;
+  display: none;
+}
+
+.visually-hidden:checked~.popup__items.more {
+  display: grid;
+}
+
+/* media more links */
+.bg-hand {
+  background: url(./images/hand.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-hand:focus,
+.bg-hand:hover {
+  background: var(--popup-btn-bg) url(./images/hand-h.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-hastag {
+  background: url(./images/hastag.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-hastag:focus,
+.bg-hastag:hover {
+  background: var(--popup-btn-bg) url(./images/hastag-h.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-heart {
+  background: url(./images/heart.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-heart:focus,
+.bg-heart:hover {
+  background: var(--popup-btn-bg) url(./images/heart-h.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-user-add {
+  background: url(./images/user-add.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-user-add:focus,
+.bg-user-add:hover {
+  background: var(--popup-btn-bg) url(./images/user-add-h.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-xing {
+  background: url(./images/xing.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-xing:focus,
+.bg-xing:hover {
+  background: var(--popup-btn-bg) url(./images/xing-h.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-snapchat {
+  background: url(./images/snapchat.svg) 14px 6px/52px no-repeat;
+}
+
+.bg-snapchat:focus,
+.bg-snapchat:hover {
+  background: var(--popup-btn-bg) url(./images/snapchat-h.svg) 14px 6px/52px no-repeat;
 }
 
 /* ---------------------------------------------- */
@@ -368,6 +461,7 @@
   justify-content: center;
 
   font-size: 14px;
+  text-align: center;
 }
 
 /* ---------------------------------------------- */
@@ -383,7 +477,7 @@
   width: 100%;
   height: 40px;
 
-  color: var(--title);
+  color: var(--footer);
 
   background-color: var(--title-bg);
 }
