--- a/sass_bem_wireframe_practice/scss/style.scss
+++ b/sass_bem_wireframe_practice/scss/style.scss
@@ -3,7 +3,8 @@
 
 // fonts
 @import url('https://fonts.googleapis.com/css2?family=Comfortaa&family=Montserrat:wght@400;500;700&display=swap');
-$font: 'Montserrat', sans-serif;
+$fontComfortaa: 'Comfortaa', cursive;
+$fontMontserrat: 'Montserrat', sans-serif;
 
 // colors
 // backgrounds
@@ -28,56 +29,170 @@ $lineCol: rgba(0, 0, 0, 0.5);
 
   width: 100%;
 
-  font-family: $font;
+  font-family: $fontMontserrat;
   font-style: normal;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.667;
+  letter-spacing: -0.015em;
 
   color: $textCol;
   background-color: $firstPageBg;
 }
 
-.header {}
+// header
+.header {
+  padding: 0 (80 / 1680 * 100%);
 
-.header__logo {}
+  display: flex;
+  flex-direction: row;
 
-.logo {}
+  width: 100%;
+  min-height: 60px;
 
-.logo__icon {}
+  &__logo {
+    width: (122 + 72) / 1520 * 100%;
+    height: 60px;
+  }
 
-.logo__text {}
+  &__nav {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 
-.header__nav {}
-
-.nav {}
-
-.nav__items {}
-
-.nav__item {}
-
-.link {}
-
-.link__header {}
-
-.btn {}
-
-.btn__header {}
-
-.content {
-  flex: 1 1 auto;
+    width: (1520 - 122 - 72) / 1520 * 100%;
+    height: 60px;
+  }
 }
 
-.content__hero {}
+// logo
+.logo {
+  display: flex;
+  align-items: center;
 
-.hero {}
+  &__icon {
+    flex: 0 0 24px;
+    margin-right: 8px;
+  }
+  
+  &__text {
+    font-family: $fontComfortaa;
+    font-size: 28px;
+    line-height: 32 / 28 * 1;
+    color: $titleCol;
+  }
 
-.hero__title {}
+  &__text:hover,
+  &__text:focus {
+    color: $lineCol;
+  }
+}
 
-.hero__btn {}
+// navbar
+.nav {
+  &__items {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
 
-.content__body {}
+  .links{ 
+    width: 388 / 1328 * 100%;
+  }
 
+  .btns {
+    width: 272 / 1328 * 100%;
+  }
+  
+  &__item {
+    font-weight: 500;
+    font-size: 15px;
+    line-height: 1.2;
+  }
+}
+
+// nac links
+.link {
+  &__header {
+    color: $headerLinkCol;
+  }
+
+  &__header:hover,
+  &__header:focus {
+    color: $textCol;
+  }
+}
+
+// nav btns
+.btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  color: $btnTextCol;
+      
+  background-color: $btnBg;
+
+  border: 1px solid $btnBgHoverFocus;
+  -webkit-border-radius: 6px;
+  -moz-border-radius: 6px;
+  -ms-border-radius: 6px;
+  -o-border-radius: 6px;
+  border-radius: 6px;
+
+  &__header {
+    height: 40px;
+  }
+
+  &:hover,
+  &:focus {
+    color: $btnTextHoverFocusCol;
+    background-color: $btnBgHoverFocus;
+  }
+}
+
+.btns {
+  & .nav__item {
+    width: 130 / 272 * 100%;
+  }
+}
+
+// nac links, btns, logo active
+.link,
+.btn,
+.logo__text {
+  -webkit-transition: all .1s ease-in;
+  -moz-transition: all .1s ease-in;
+  -ms-transition: all .1s ease-in;
+  -o-transition: all .1s ease-in;
+  transition: all .1s ease-in;
+}
+
+// main content
+.content {
+  flex: 1 1 auto;
+
+  &__hero {
+    width: 100%;
+    height: 930px;
+  }
+
+  &__body {}
+}
+
+// hero
+.hero {
+  background-image: url("../image/hero/hero-img.svg");
+  background-position: center;
+  background-size: cover;
+
+  &__title {}
+
+  &__btn {}
+}
+
+// body
 .body {}
 
 .body__header {}
